groovy tests